src/frontend/src/app/transactions/transactions.component.scss
.date {
    min-width: 7rem;
}

.name {
    flex: 1;
    min-width: 0;
    max-width: 20%;
}

.purpose {
    flex: 1;
    min-width: 0;
}


.category {
    flex: 1;
    min-width: 0;
    max-width: 10%;
}

.value {
    flex: 1;
    min-width: 0;
    max-width: 8%;
    text-align: right;
}

.icon {
    width: 1rem;
}

.type-icon {
    width: 1.5rem;
    text-align: center;
}

.line:not(.header) {
    cursor: pointer;
}

.line:not(.header):hover {
    color: var(--p-navigation-item-focus-color);
    background: var(--p-navigation-item-focus-background);
}

.isNew {
    background-color: var(--p-sky-50)
}

